// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AccountStrategy one 1`] = `
{
  "mock": {
    "environments": [
      "mock[0-9]",
    ],
    "id": "123456789012",
  },
  "shared": {
    "config": {
      "key": "value",
    },
    "environments": [
      "development",
      "feature/[/a-zA-z0-9-]+",
      "test",
      "qa[0-9]",
      "staging",
      "preproduction",
      "production",
    ],
    "id": "123456789012",
  },
}
`;

exports[`AccountStrategy three 1`] = `
{
  "dev": {
    "config": {
      "cidr": "172.16.0.0/22",
    },
    "environments": [
      "development",
      "feature/[/a-zA-z0-9-]+",
      "test",
      "qa[0-9]",
      "staging",
    ],
    "id": "111111111111",
  },
  "mock": {
    "environments": [
      "mock[0-9]",
    ],
    "id": "123456789012",
  },
  "preprod": {
    "config": {
      "cidr": "172.16.4.0/22",
    },
    "environments": [
      "qa[0-9]",
      "preproduction",
    ],
    "id": "222222222222",
  },
  "prod": {
    "config": {
      "cidr": "172.16.8.0/22",
    },
    "environments": [
      "production",
    ],
    "id": "333333333333",
  },
}
`;

exports[`AccountStrategy two 1`] = `
{
  "dev": {
    "config": {
      "foo": "bar",
    },
    "environments": [
      "development",
      "feature/[/a-zA-z0-9-]+",
      "test",
      "qa[0-9]",
      "staging",
    ],
    "id": "123456789012",
  },
  "mock": {
    "environments": [
      "mock[0-9]",
    ],
    "id": "123456789012",
  },
  "prod": {
    "config": {
      "baz": "quux",
    },
    "environments": [
      "preproduction",
      "production",
    ],
    "id": "213456789012",
  },
}
`;

exports[`AccountType 1`] = `
{
  "DEV": "dev",
  "MOCK": "mock",
  "PREPROD": "preprod",
  "PROD": "prod",
  "SHARED": "shared",
}
`;

exports[`emptyMockAccountProps 1`] = `
{
  "id": "123456789012",
}
`;
